<resources>
    <string name="app_name">RAF Dnevnjak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="past_obligations">Show past obligations</string>
    <string name="calendar">Calendar</string>
    <string name="daily_plan">Daily plan</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="high">High</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="sunday">Sun.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="empty_field">You must fill this field</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>