<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CalendarFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/monthTextView"
        android:layout_width="410dp"
        android:layout_height="56dp"
        android:background="@color/header"
        android:textAlignment="center"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="411dp"
        android:layout_height="576dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:text="@string/monday"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:text="@string/tuesday"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:text="@string/wednesday"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:text="@string/thursday"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:text="@string/friday"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:text="@string/saturday"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:background="@color/header"
        android:text="@string/sunday"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>