<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.BottomNavigationFragment$CreateObavezaFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView4">

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="137dp"
            android:layout_height="58dp"
            android:background="@color/low"
            android:button="@null"
            android:text="@string/low"
            android:textAlignment="center"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonMid"
            android:layout_width="137dp"
            android:layout_height="58dp"
            android:background="@color/mid"
            android:button="@null"
            android:text="@string/mid"
            android:textAlignment="center"
            android:alpha="0.5"/>

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="137dp"
            android:layout_height="58dp"
            android:background="@color/high"
            android:button="@null"
            android:text="@string/high"
            android:textAlignment="center"
            android:alpha="0.5"/>
    </RadioGroup>

    <TextView
        android:id="@+id/dateTextView4"
        android:layout_width="411dp"
        android:layout_height="56dp"
        android:background="@color/header"
        android:textAlignment="center"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="332dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="332dp"
        android:layout_height="53dp"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="332dp"
        android:layout_height="294dp"
        android:layout_marginTop="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEditText" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="132dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:backgroundTint="@color/low"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="132dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:backgroundTint="@color/high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>